@@ -1,3 +1,34 @@
+/*
+ * dfsch - dfox's quick and dirty scheme implementation
+ *     Exception and continuation handling implementation
+ * Copyright (C) 2005 Ales Hakl
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ *
+ */
+
+/*
+ * This file contains some very ugly code, that has great potential to break 
+ * things if used improperly. Generaly, don't include this unless you are sure
+ * you need to.
+ *
+ * Only the macros defined here are considered public interface, but 
+ * unfortunately, they are macros so changes to them breaks binary 
+ * compatibility and requires recompile of user code including this file.
+ */
+
 #ifndef H__dfsch__magic__
 #define H__dfsch__magic__
 
